front-end/style.css
* {box-sizing: border-box; 
    /* Color scheme */
    
    --textcolor: rgb(0, 0, 0);
    --bgcolor: #f3f3f3;
    --highlight: #0095FF;
    --bg2color: #f6f6f6;
    --warning: #aa1515;
  
}

@media (prefers-color-scheme: dark) {
    * {
        --textcolor: #e7e7e7;
        --bgcolor: #252525;
        --bg2color: #363636;
        --highlight: #3789e6;
        --warning: #7a2c2c;
    }
    .img-text-logo {    
        filter: invert(100%);
    }        
}


@font-face {
    font-family: 'atkinson_hyperlegibleregular';
    src: url('fonts/AtkinsonHyperlegible-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'atkinson_hyperlegibleregular';
    src: url('fonts/AtkinsonHyperlegible-Bold.woff2') format('woff2');
    font-weight: bold;
    font-style: bold;
}

html, body {
    margin: 0;
    padding: 0;
}

main {
    position: relative;
}

body {
    line-height: 1.6;
    font-size: 1.1rem;
    color: var(--textcolor);
    background: var(--bgcolor);
    position: relative;
    font-family: 'atkinson_hyperlegibleregular';
    min-height: 700px;
}

/*removes button styles */
button { 
    border:none;
    background-color:transparent;
    font-family: 'atkinson_hyperlegibleregular';
    outline:none;
 }

input[type="submit"] { 
    -webkit-appearance: none;
    border:none;
    outline:none;
    font-family: 'atkinson_hyperlegibleregular';
}


/* ------- Sections ------- */

section {
    display: none;
    position: absolute;
    top: 0;
    width: 100%;
    background: var(--bgcolor);
    min-height: 100vh;
    z-index: 1;
}

section:target { /* Show section */
    display: block;
}

section#home {
    display: block;
    padding-top: 5rem;
}

h1 {
    font-size: 1.8em; 
    font-weight: bold;
    letter-spacing: 2.8px;
}

h2, h3 {
    line-height: 1.2
}

a {
    color: var(--textcolor);
    text-decoration: none;
}

header {
    padding: 0vw 10vw 0vw 10vw;
    margin-top: 2rem;
    display: flex;
    flex-wrap: wrap;   
    position: absolute; 
    width: 100%;
    z-index: 2;
    justify-content: center;
}

.header-logo {
    display: flex;
    height: 70px;
    flex: 1;
    margin-bottom: 20px;
}

.img-logo {
    width: 70px;
}

.img-text-logo {    
    width: 180px;
    margin: 20px;
}

.nav-link {
    color: var(--highlight);
    font-size: 1rem;
    padding: 10px;
    align-items: center;
    line-height: 70px;
    white-space: nowrap;
}

.container {
    margin-left: 2vh;
    margin-right: 2vh;
}

.content {
    min-width: 80px;
    max-width: 600px;
    max-height: 700px;
    margin-right: auto;
    margin-left: auto;
    margin-top: 10vh;
    background-color: var(--bg2color);
    border-radius: 20px;
    box-shadow: 2px 1px 45px 0px rgba(0,0,0,0.29);
}

.innerBox {
    padding-left: 35px;
    padding-right: 35px;
    padding-top: 1px;
    padding-bottom: 35px;
}

.innerBox-text {
    text-align: left;
}

form {
    padding-top: 1em;
}

.emailInput {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}

input[type="email"]
{
    color: var(--textcolor);
    height: 40px;
    width: 90%;
    font-size: 1rem;
    border-radius: 10px;
    border-color: var(--highlight);
    border-width: 2;
    border-style: solid;
    transition: 1.5ms;
    background: url(img/lockIcon.png) no-repeat scroll 12px 8px;
    background-size: 15px;
    background-color: var(--bgcolor);
    padding-left: 40px;
    flex: 1;
}

::placeholder {
    color: var(--textcolor);
    opacity: 0.4;
    margin-left: 15px;
    letter-spacing: 0.4px;
    font-size: 0.8 rem;
}

.add-label-button {    
    margin-left: 15px;
    width: 10%;
    align-items: flex-end;
    font-size: 30px;
    cursor: pointer;
}

#label-toggle {
    display: none;   
}

.add-label-box {
    display: none;
    align-content: flex-start;
    flex-basis: 100%;
}

#label-toggle:checked ~ .add-label-box { 
    display: block; 
}

input[type="text"]
{
    color: var(--textcolor);
    height: 40px;
    width: 100%;
    font-size: 1rem;
    border-radius: 10px;
    border-color: var(--textcolor);    
    border-width: 2;
    border-style: solid;
    transition: 1.5ms;
    background-color: var(--bgcolor);
    padding-left: 10px;
}

.privacy-and-terms-checkbox {
    margin-top: 2vh;
    padding-left: 1vh;
    font-size: 0.8rem;
    float:left
}

.privacy-and-terms-checkbox > label {
    padding-left: 0.5vh;
}

.privacy-and-terms-checkbox > label a, .how-to-text > a, a {
    color: var(--highlight);
}

.privacy-and-terms-checkbox > label a:hover, .how-to-text > a:hover {
    color: var(--textcolor);
    text-decoration: underline;
    cursor: pointer;
}


.button-cta {
    z-index: 1;
    clear: both;
    left: 0%;
    position: relative;
    margin-top: 2em;
    background-color: var(--highlight);
    color: white;
    width: 100%;
    height: 50px;
    text-align: center;
    font-size: 1.1rem;
    font-weight: 400;
    letter-spacing: 1px;
    border-radius: 10px;
    border-width: 0;
}

.button-cta:hover {
    cursor: pointer;
    transition: 0.2s;
    background-color: white;
    color: var(--highlight);
    border-color: var(--highlight);
    border-width: 2px;
}

.success {
    text-align: center;
    margin-bottom: 65px;
}

.mail-overlay {
    display: none;
}

.howto-div {
    background-color: var(--bgcolor);
    padding-left: 2vh;
    padding-right: 2vh;
    padding-bottom: 10vh;
    padding-top: 6rem;
}

.howto-header{
    margin-left: auto;
    margin-right: auto;
    max-width: 800px;
    float: center;
}

.howto-title{
    padding-left: 3em;
    color: var(--bgcolor);
    float: left;
}

.illustration {
    width: 120px;
    float: right;
    margin-right: 60px;
    margin-bottom: -30px;
}

.howto-container {
    clear: both;
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
    background-color: var(--bg2color);
    border-radius: 20px;
    box-shadow: 2px 1px 45px 0px rgba(0,0,0,0.29);
}

.how-to-text {
    padding: 35px;
    margin: auto;
    color: var(--textcolor);
}

section#cancel, section#support, section#tandc, section#privacy {
    padding-left: 2vh;
    padding-right: 2vh;
    padding-top: 10rem;
    min-height: 150vh;
}

#cancelButton:hover {
    background-color: var(--warning);
    color: var(--bgcolor)
}

.support-img {
    width: 100px;
    float: right;
}

.support-list {
    padding-bottom: 2rem;
}

.support-row-label {
    width: 20%;
    font-size: 1rem;
    line-height: 3rem;
    color: var(--textcolor);
    margin-left: 2%;
}

.support-row-input {
    float: right;
    width: 70%;
    font-size: 0.8rem;
    line-height: 2rem;
    background-color: var(--bgcolor);
    padding-left: 8px;
    color: var(--textcolor);
    border-radius: 5px;
    border: none;
}

.content-box{
    clear: both;
    max-width: 600px;
    min-height: 40vh;
    margin-left: auto;
    margin-right: auto;
    background-color: var(--bg2color);
    border-radius: 20px;
    box-shadow: 2px 1px 45px 0px rgba(0,0,0,0.29);
    padding-left: 35px;
    padding-right: 35px;
    padding-top: 1px;
    padding-bottom: 35px;
    margin-bottom: 5vh;
}

.imprint-button {
    bottom: 2.1rem; 
    right: 2.1rem; 
    border-radius: 100%;
    height: 50px;
    width: 50px;
    background: var(--bg2color) 0.9;
    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
    backdrop-filter: blur( 8px );
    -webkit-backdrop-filter: blur( 8px );
    position: fixed;
    font-size: 2rem; 
    font-weight: bolder;
    text-align: center;
    color: var(--highlight);
    overflow: hidden;
    z-index: 1;
}

.imprint-button:active {
    box-shadow: inset 20px 20px 60px rgba( 255, 255, 255, 0.25 ),
    inset -20px -20px 60px var(--bg2color) 0.45,
    0 8px 32px 0 rgba( 31, 38, 135, 0.10 );
}

.imprint-modal {
    position: fixed;
    display: block;
    bottom: 0;
    right: 0;
    max-width: 600px;
    margin: 2rem;
    border-radius: 20px;
    background: var(--bg2color) 0.9;
    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
    backdrop-filter: blur( 10px );
    -webkit-backdrop-filter: blur( 10px );
    clip-path: inset(100% 0% 0% 100% round 2rem);
    transition: clip-path .5s ease-in-out;
    z-index: 2;
}

.imprint-container-header {
    position: relative;
}

.imprint-modal span {
    position:absolute;
    font-size: 2rem;
    right: -1rem;
    bottom: 0rem;
    padding: 1rem;    
}

.imprint-modal-content {
    color: var(--textcolor);
    padding: 2em;
    font-size: 1rem;
}

.imprint-container {
    font-size: 0.8rem;
}


/* ------- Smaller screens ------- */

@media only screen and (max-width: 570px) {
    body { font-size: 1rem; }
    .form { font-size:  1rem;}
    .how-to-text { font-size:  1rem; }
    .img-logo { width: 50px; }
    .img-text-logo { width: 130px }
    .support-row-label { width: 100% }
    .support-row-input { width: 100% }
  }

@media only screen and (min-width: 700px) and (min-height: 760px) {
    .button-cta {
        width: 60%;
        left: 20%;
    }

    .mail-overlay {
        display: block;        
        max-width: 660px;
        margin-left: auto;
        margin-right: auto;        
    }

    .img-mail-overlay {
        margin-top: -90px;  
        filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0.2)); 
    }

    .img-mail-backdrop {
        position: absolute;
        z-index: -1;
        max-width: 660px;
        margin-top: 10.5vh;
        filter: drop-shadow(2px 2px 60px rgba(0, 0, 0, 0.1));     
    }
}

@media only screen and (min-width: 700px) and (min-height: 760px) and (prefers-color-scheme: dark) {
    .img-mail-overlay {
        margin-top: -90px;  
        filter: drop-shadow(0px 10px 15px rgba(255, 255, 255, 0.2)) invert(80%) saturate(0%); 
    }

    .img-mail-backdrop { 
        filter: drop-shadow(2px 2px 60px rgba(255, 255, 255, 0.1)) invert(80%) saturate(0%);
    }
}

@media only screen and (max-width: 1000px) {
    header {
        padding: 0;
    }
    
    nav {
        width: 100%;
        text-align: center;
    }

    .nav-link {
        line-height: 2rem;        
    }

    .header-logo {
        justify-content: center;
    }

    section#howto {
        padding-top: calc(2em);
    }

    section#home {
        padding-top: calc(8em + 6vw);
        padding-bottom: calc(6em + 5vw);
    }

    section#cancel, section#support, section#tandc, section#privacy {
        padding-top: calc(12em + 6vw);
        min-height: 150vh;
    }
}

